fix of the navigation bar across the site

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
     <!--        navigation bar with the active class when on the actual page  -->
     <nav>
         <div class="row nav-section nav">
-            <div class="col-4 col-lg-4 nav-link active mainhome">
+            <div class="col-12 col-lg-4 col-md-4 nav-link active mainhome">
                 <h2 id="myname"><a href="index.html">Adnan Muhtadi</a></h2>
             </div>
 
             <div class="col-1 col-lg-1"></div>
             <div class="col-1 col-lg-1"></div>
 
-            <div class="col-2 col-lg-2 col-sm-2 right">
+            <div class="col-12 col-lg-2 col-md-2 right">
                 <h2><a href="journey.html">My Journey</a></h2>
             </div>
 
-            <div class="col-2 col-lg-2 right">
+            <div class="col-12 col-lg-2 col-md-2 right">
                 <h2><a href="portfolio.html">My Portfolio</a></h2>
             </div>
 
-            <div class="col-2 col-lg-2 right">
+            <div class="col-12 col-lg-2 col-md-2 right">
                 <h2><a href="connect.html">Connect</a></h2>
             </div>
         </div>
