Labelled and cleaned the styling sheet for the site overall

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,10 +46,10 @@
     <!--   the section where the content of my journey would be placed -->
     <div class="main-section">
         <h1 class="title">Project Profolio</h1>
-        <!-- having dates, places of where it took place, and my roles-->
 
+        <!-- having dates, places of where it took place, and my roles-->
         <div class="col-lg-12 projects">
-            <p>A placeholder for all developed sites to advertise the skills that i have gained and areas that </p>
+            <p>A placeholder for all sites that has been developed during the duration of my course. It demostrate the different programming languages used to develop the sites.</p>
         </div>
 
         <section class="row col-12 portfolio-thumbs">
@@ -96,7 +96,7 @@
                         <img src="assets/images/resume.jpg" alt="#" class="timage"></a>
                     <div class="container-thumb">
                         <h4><b>Rosie Resume</b></h4>
-                        <p>To create an online Resume for Rosie which show tells her skills as have access to her CV. With quick links to her soical media. </p>
+                        <p>To create an online Resume for Rosie which show tells her skills as have access to her CV, with quick links to her soical media. </p>
                     </div>
                     <a href="assets/portfolio-sites/resume-project/index.html" target="_blank" class="btn btn-primary visitme">Visit Me!</a>
                 </div>
@@ -119,11 +119,11 @@
                             <a href="index.html">Home</a>
                         </div>
                         <div class="col col-lg-6 col-md-12">
-                            <a href="portfolio.html">Portfolio</a>
+                            <a href="journey.html">My Journey</a>
                         </div>
                         <div class="w-100"></div>
                         <div class="col col-lg-6 col-md-12">
-                            <a href="journey.html">My Journey</a>
+                            <a href="portfolio.html">Portfolio</a>
                         </div>
                         <div class="col col-lg-6 col-md-12">
                             <a href="connect.html">Connect</a>
