--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
+<!-- declared the doctype as well as the language in the HTML -->
 <!DOCTYPE html>
 <html lang="en">
+
+<!-- in the head, i have declared the character type as well initiating the viewport for it to be responsive. i have linked the bootstrap and font awesome CDNs to the site so it would call from their directors. I have an external document which is used for the styling, which meant i associated the stylesheet to the page. -->
 
 <head>
     <meta charset="utf-8">
@@ -11,7 +14,8 @@
 </head>
 
 <body>
-    <!--        navigation bar with the active class when on the actual page  -->
+
+    <!-- This section is for the navigation where bootstrap was used to align the four pages within the row. The active class would display which page the user is on at that specific time. Each link has a hoover effect which would enable the user to see which link they could go to. -->
     <nav>
         <div class="row nav-section nav">
             <div class="col-12 col-lg-4 col-md-5 nav-link active mainhome">
@@ -34,18 +38,19 @@
         </div>
     </nav>
 
-    <!--image header of the page-->
+    <!-- The header element was used to display my header image which would be the same sized from the bottom of the navigation to the bottom of the screen. within Index.html, i have also added another picture on top of the main header imager to show myself as well as adding a headline text within it. -->
     <header>
         <div class="row no-gutter header-section">
             <div class="col-lg-12 bg-image1"></div>
-                <div class="col-12 col-lg-12 col-md-12 profile-pic1">
-                    <img class="profile-pic2 row" src="assets/images/me.jpg" alt="Profile Picture">
-                    <h2>Project Manager / Trainee Full Stack Developer</h2>
-                    <h3>Personal Portfolio</h3>
-                </div>
+            <div class="col-12 col-lg-12 col-md-12 profile-pic1">
+                <img class="profile-pic2 row" src="assets/images/me.jpg" alt="Profile Picture">
+                <h2>Project Manager / Trainee Full Stack Developer</h2>
+                <h3>Personal Portfolio</h3>
+            </div>
         </div>
     </header>
 
+    <!-- The main section is where the content of the page is placed, i have used bootstrap positioning to align the descriptions on the left while having an image on the right. -->
     <div class="main-section">
         <h1 class="title">About Me</h1>
         <div class="row">
@@ -54,17 +59,18 @@
             </div>
 
             <div class="col-lg-4">
-                <img class="aboutme-img" src="assets/images/chess.jpg" alt="">
+                <img class="aboutme-img" src="assets/images/chess.jpg">
             </div>
         </div>
 
+        <!-- the interests was built with the bootstrap column structure. Throughout the section, depending on the screen that the website is being viewed in, the layout of the interests would change, that is the reason why some of the content has been put twice in the same header. When the screen is on the 21-inch display, it would should show side by side, when the screen is mobile size, the content would be displayed on top of each other. -->
         <div class="row interests">
             <div class="col-lg-12">
                 <h1 class="title">Interests</h1>
             </div>
             <div class="col-12 col-lg-4 left-travelhidden">
                 <h2>Travelling</h2>
-                <p>Exploring the world and seeing the different nature beauties that it provides, experience something unfamiliar and leave with new skills or knowledge.</p>
+                <p>Exploring the world and seeing the different natural beauties that it provides, experience something unfamiliar and leaving with new skills or knowledge.</p>
             </div>
             <div class="col-12 col-lg-4 col-md-5">
                 <img class="plane-img" src="assets/images/travelling.jpg" alt="Plane">
@@ -76,7 +82,7 @@
 
             <div class="col-12 col-lg-4 col-md-7 programming-info">
                 <h2>Programming</h2>
-                <p>The pleasure of making things that are useful to yourself as well as for other people. One of most satisfying aspects of the programming is seeing code you wrote deployed in a live environment.</p>
+                <p>The pleasure of making things that are useful to yourself as well as for other people. One of the most satisfying aspects of the programming is seeing code you wrote deployed in a live environment.</p>
             </div>
             <div class="col-12 col-lg-4 col-md-5">
                 <img class="laptop-img" src="assets/images/programming.jpg" alt="laptop">
@@ -97,17 +103,15 @@
 
             <div class="col-12 col-lg-4 col-md-7 cooking-info">
                 <h2>Cooking</h2>
-                <p>I enjoy cooking, as I find it extremely interesting cooking different cuisines, as well as making something out of different ingredients and spices.</p>
+                <p>I enjoy cooking, as I indulge cooking different cuisines, as well as making something out of different ingredients and spices.</p>
             </div>
             <div class="col-12 col-lg-4 col-md-5">
                 <img class="cooking-img" src="assets/images/cooking.jpg" alt="laptop">
             </div>
         </div>
-
-
-
     </div>
 
+    <!-- The footer has the bootstrap column structure which would split the footer into 3 sections. (quick links / social media / CV) the quick links would navigate users to the other pages of the site, again, with different styling on different devices used. -->
     <footer>
         <div class="footer-section">
             <div class="row">
@@ -131,6 +135,7 @@
 
                 </div>
 
+                <!-- Utilising font awesome for the icons to link users to my social media links  -->
                 <div class="col-lg-4 col-md-6 connect">
                     <h4>Lets Connect</h4>
                     <div class="social-logos">
@@ -153,14 +158,15 @@
                     </div>
                 </div>
 
+                <!-- being able to view and download my CV from this section of the footer. -->
                 <div class="col-lg-4 col-md-3 mycv">
-                    <h4>Take A Copy Of My CV!</h4>
+                    <h4>Take a copy of my CV!</h4>
                     <a href="assets/cv/adnan-muhtadi-cv.pdf" target="_blank"><i class="fas fa-file cv" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
-
     </footer>
+
 </body>
 
 </html>
