Adding an title/alt labeling for the background images

--- a/connect.html
+++ b/connect.html
@@ -41,7 +41,7 @@
     <!-- The header element was used to display my header image which would be the same sized from the bottom of the navigation to the bottom of the screen. There is a small line of text which would display a mini header (catch phrase) -->
     <header>
         <div class="row no-gutter header-section">
-            <div class="col-12 col-lg-12 bg-image4"></div>
+            <div class="col-12 col-lg-12 bg-image4" title="Background Image"></div>
 
             <div class="main-me-text">
                 <div class="connect-title">
