--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- The header element was used to display my header image which would be the same sized from the bottom of the navigation to the bottom of the screen. within Index.html, i have also added another picture on top of the main header imager to show myself as well as adding a headline text within it. -->
     <header>
         <div class="row no-gutter header-section">
-            <div class="col-lg-12 bg-image1"></div>
+            <div class="col-lg-12 bg-image1" title="Background Image"></div>
             <div class="col-12 col-lg-12 col-md-12 profile-pic1">
                 <img class="profile-pic2 row" src="assets/images/me.jpg" alt="Profile Picture">
                 <h2>Project Manager / Trainee Full Stack Developer</h2>
@@ -59,7 +59,7 @@
             </div>
 
             <div class="col-lg-4">
-                <img class="aboutme-img" src="assets/images/chess.jpg">
+                <img class="aboutme-img" src="assets/images/chess.jpg" alt="Mind of Chess">
             </div>
         </div>
 
