--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
     <!-- The header element was used to display my header image which would be the same sized from the bottom of the navigation to the bottom of the screen. -->
     <header>
         <div class="row no-gutter header-section">
-            <div class="col-lg-12 bg-image3"></div>
+            <div class="col-lg-12 bg-image3" title="Background Image"></div>
         </div>
     </header>
 
@@ -59,7 +59,7 @@
             <div class="col-lg-3 col-md-6">
                 <div class="card">
                     <a href="assets/portfolio-sites/love-running/index.html" target="_blank">
-                        <img src="assets/images/love-running.jpg" alt="#" class="timage"></a>
+                        <img src="assets/images/love-running.jpg" alt="Love Running" class="timage"></a>
                     <div class="container-thumb">
                         <h4><b>Love Running</b></h4>
                         <p>A scheduled based for individuals who would like to run as well as a photo gallery to show the fun that is part of the group.</p>
@@ -71,7 +71,7 @@
             <div class="col-lg-3 col-md-6">
                 <div class="card">
                     <a href="assets/portfolio-sites/stream/index.html" target="_blank">
-                        <img src="assets/images/stream.jpg" alt="#" class="timage"></a>
+                        <img src="assets/images/stream.jpg" alt="Stream" class="timage"></a>
                     <div class="container-thumb">
                         <h4><b>Stream</b></h4>
                         <p>To educate individuals how to program as well as well as short cuts to different online tools that is involved in building websites </p>
@@ -83,7 +83,7 @@
             <div class="col-lg-3 col-md-6">
                 <div class="card">
                     <a href="assets/portfolio-sites/whiskey-drop/index.html" target="_blank">
-                        <img src="assets/images/whisky.jpg" alt="#" class="timage"></a>
+                        <img src="assets/images/whisky.jpg" alt="Whisky Drop" class="timage"></a>
                     <div class="container-thumb">
                         <h4><b>Whisky Drop</b></h4>
                         <p>To advertise a promotion on whisky that is currently on offer when signing up to a monthly subscritpion.</p>
@@ -95,7 +95,7 @@
             <div class="col-lg-3 col-md-6">
                 <div class="card">
                     <a href="assets/portfolio-sites/resume-project/index.html" target="_blank">
-                        <img src="assets/images/resume.jpg" alt="#" class="timage"></a>
+                        <img src="assets/images/resume.jpg" alt="Rosie Resume" class="timage"></a>
                     <div class="container-thumb">
                         <h4><b>Rosie Resume</b></h4>
                         <p>To create an online Resume for Rosie which show tells her skills as have access to her CV, with quick links to her soical media. </p>
