--- a/journey.html
+++ b/journey.html
@@ -42,7 +42,7 @@
     <!-- The header element was used to display my header image which would be the same sized from the bottom of the navigation to the bottom of the screen. -->
     <header>
         <div class="row no-gutter header-section">
-            <div class="col-lg-12 bg-image2"></div>
+            <div class="col-lg-12 bg-image2" title="Background Image"></div>
         </div>
     </header>
 
