--- a/connect.html
+++ b/connect.html
@@ -41,8 +41,8 @@
     <!-- The header element was used to display my header image which would be the same sized from the bottom of the navigation to the bottom of the screen. There is a small line of text which would display a mini header (catch phrase) -->
     <header>
         <div class="row no-gutter header-section">
+            <!-- The header image was taken from https://unsplash.com/photos/oIpJ8koLx_s -->
             <div class="col-12 col-lg-12 bg-image4" title="Background Image"></div>
-
             <div class="main-me-text">
                 <div class="connect-title">
                     <h1>There is no such thing as<br>
@@ -68,7 +68,8 @@
         <div class="center-form">
             <h2 id="contactlabel">Contact Form</h2>
 
-            <form>
+            <!-- utilised W3School to assist with the remember how the structure of the of the form https://www.w3schools.com/html/html_forms.asp -->
+            <form action="#" name="connect-form">
                 <div class="form-group row">
                     <div class="col-md-3 col-sm-2 col-form-label labelatt">
                         <label for="user-fullname">Full Name:</label>
@@ -83,7 +84,7 @@
                         <label for="user-email">Email Address:</label>
                     </div>
                     <div class="col-md-9 col-sm-10">
-                        <input type="email" class="form-control" id="user-email">
+                        <input type="email" class="form-control" id="user-email" required>
                     </div>
                 </div>
 
@@ -106,8 +107,8 @@
                 </div>
 
                 <br>
-                <input id="submit" type="button" value="Submit">
-            </form>
+                <input type="submit" value="Submit" id="submit">
+                </form>
             <br>
             <br>
             <br>
@@ -141,7 +142,7 @@
 
                 </div>
 
-                <!-- Utilising font awesome for the icons to link users to my social media links  -->
+                <!-- Utilising font awesome for the icons to link users to my social media links -->
                 <div class="col-lg-4 col-md-6 connect">
                     <h4>Lets Connect</h4>
                     <div class="social-logos">
