added the URL locations of where i receivedthe pictures

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <header>
         <div class="row no-gutter header-section">
             <div class="col-lg-12 bg-image1" title="Background Image"></div>
+            <!-- The header image was taken from https://unsplash.com/photos/vpOeXr5wmR4 -->
             <div class="col-12 col-lg-12 col-md-12 profile-pic1">
                 <img class="profile-pic2 row" src="assets/images/me.jpg" alt="Profile Picture">
                 <h2>Project Manager / Trainee Full Stack Developer</h2>
@@ -63,7 +64,7 @@
             </div>
         </div>
 
-        <!-- the interests was built with the bootstrap column structure. Throughout the section, depending on the screen that the website is being viewed in, the layout of the interests would change, that is the reason why some of the content has been put twice in the same header. When the screen is on the 21-inch display, it would should show side by side, when the screen is mobile size, the content would be displayed on top of each other. -->
+        <!-- the interests was built with the bootstrap column structure. Throughout the section, depending on the screen that the website is being viewed in, the layout of the interests would change, that is the reason why some of the content has been put twice in the same header. When the screen is on the 21-inch display, it would show side by side, when the screen is mobile size, the content would be displayed on top of each other. -->
         <div class="row interests">
             <div class="col-lg-12">
                 <h1 class="title">Interests</h1>
