--- a/journey.html
+++ b/journey.html
@@ -38,10 +38,10 @@
         </div>
     </nav>
 
-
     <!-- The header element was used to display my header image which would be the same sized from the bottom of the navigation to the bottom of the screen. -->
     <header>
         <div class="row no-gutter header-section">
+            <!-- The header image was taken from https://unsplash.com/photos/IuLgi9PWETU -->
             <div class="col-lg-12 bg-image2" title="Background Image"></div>
         </div>
     </header>
@@ -146,7 +146,7 @@
                 </div>
             </div>
 
-            <!-- the journey was used in a previous project during this course, i used it for my own journey section but extended it to carry on with the dates. -->
+            <!-- the journey was used in a previous project during this course, i used it for my own journey section but extended it to carry on with the dates. I got the concept of the code from Rosie Resume project. -->
             <div class="col-8">
                 <div class="journey">
                     <div class="journey-item " data-journeydates="May 19th 1990">
@@ -210,8 +210,6 @@
             </div>
         </section>
     </div>
-
-
 
     <!-- The footer has the bootstrap column structure which would split the footer into 3 sections. (quick links / social media / CV) the quick links would navigate users to the other pages of the site, again, with different styling on different devices used. -->
     <footer>
