--- a/portfolio.html
+++ b/portfolio.html
@@ -42,6 +42,7 @@
     <!-- The header element was used to display my header image which would be the same sized from the bottom of the navigation to the bottom of the screen. -->
     <header>
         <div class="row no-gutter header-section">
+            <!-- The header image was taken from https://unsplash.com/photos/b21Ty33CqVs -->
             <div class="col-lg-12 bg-image3" title="Background Image"></div>
         </div>
     </header>
